--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
+  "singleQuote": false,
+  "printWidth": 120,
   "tabWidth": 2,
-  "printWidth": 80
+  "bracketSpacing": true,
+  "useTabs": false
 }
