--- a/package.json
+++ b/package.json
@@ -12,31 +12,45 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql2": "^3.12.0",
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^8.9.6",
+    "pino": "^9.6.0",
+    "stack-trace": "^1.0.0-pre2",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.10.5",
+    "@types/pino": "^7.0.5",
+    "@types/stack-trace": "^0.0.33",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "add": "^2.0.6",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-define-config": "^2.1.0",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
+    "inversify": "^6.2.1",
     "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0"
+    "typescript-eslint": "^8.21.0",
+    "yarn": "^1.22.22"
   }
 }
